<resources>
    <string name="app_name">Active Side</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="full_name_hint">Full name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="action_register">Save your info</string>

    <string name="facebook_app_id">264557054234642</string>
    <string name="fb_login_protocol_scheme">fb264557054234642</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_maps">Maps</string>
    <string name="title_home">My Events</string>
    <string name="title_dashboard">Global</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="full_name_edit_text_hint">Enter your full name</string>
    <string name="email_edit_text_hint">Enter your email</string>
    <string name="phone_number_edit_text_hint">Enter your phone number</string>
    <string name="set_default_image_view">Set default</string>
    <string name="event_name_hint">Event name</string>
    <string name="event_description_hint">Description</string>
    <string name="edit_acount_title">Edit account</string>
    <string name="create_new_event_title">New event</string>
    <string name="event_date_and_time_label">Event date and time</string>
    <string name="set_event_location_hint">Event location</string>
    <string name="event_needed_players">Needed players</string>

    <string name="user_id_key">user_id_key</string>
    <string name="user_prefered_distance_key">distance_preference_key</string>
    <string name="user_id_preferences">user_id_preferences</string>
    <string name="prefered_distance_preferences">distance_preference_preferences</string>
    <string name="radius_in_meters_from_your_locations">Radius in kilometers</string>
    <string name="search_properties_title">Search properties</string>
    <string name="event_description_negative_button">I can\'t</string>
    <string name="event_description_positive_button">I\'m in</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Event</string>
    <string name="edit_event_button_label">Edit event</string>
    <string name="event_details_title_label">Event details</string>
    <string name="logged_user_token">logged_user_token</string>
    <string name="signed_users_label">Signed users</string>
    <string name="comments_label">Comments</string>
    <string name="comment_hint_your_message">Your message</string>
    <string name="signed_user_list_title">Signed Users List</string>
    <string name="event_comments">Comments</string>
    <string name="archived_events">Archived Events</string>

</resources>
