<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EventDetailsDialogFragment"
    android:id="@+id/event_details_layout">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/event_details_submit_button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/event_details_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_horizontal"
                        android:text="Title"
                        android:textColor="@android:color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/event_details_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_horizontal"
                        android:text="date"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_details_title" />

                    <TextView
                        android:id="@+id/event_details_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_horizontal"
                        android:text="description"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_details_date" />

                    <LinearLayout
                        android:id="@+id/event_details_players_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_details_description">

                        <TextView
                            android:id="@+id/event_details_players_spot_left_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:gravity="center_horizontal"
                            android:text="Spots left :"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/event_details_players_spot_left"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center_horizontal"
                            android:text="10"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/event_details_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center_horizontal"
                        android:text="Location"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_details_players_layout" />

                    <LinearLayout
                        android:id="@+id/event_details_distance_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="24dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/event_details_location">

                        <TextView
                            android:id="@+id/event_details_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="4dp"
                            android:gravity="center_horizontal"
                            android:text="10"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/event_details_distance_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center_horizontal"
                            android:text="km far from you"
                            android:textColor="@android:color/black"
                            android:textSize="24sp" />


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/signed_users_label"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <com.trainerapp.ui.customui.MaxHeightScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    app:maxHeight="170dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/event_details_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.trainerapp.ui.customui.MaxHeightScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/comments_label"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    />

                <com.trainerapp.ui.customui.MaxHeightScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    app:maxHeight="500dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/event_comments_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.trainerapp.ui.customui.MaxHeightScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        android:hint="@string/comment_hint_your_message"
                        app:hintAnimationEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/comment_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/confirm_message_submit_holder"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:elevation="12dp"
                        android:innerRadius="10dp">

                        <TextView
                            android:id="@+id/confirm_message_submit_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:enabled="false"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="Send"
                            android:background="@drawable/edit_user_submit_button_selector"
                            android:textSize="20sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--android:id="@+id/event_details_fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="end|bottom"-->
        <!--android:layout_margin="16dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:src="@drawable/ic_edit"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/event_details_submit_button_layout"-->
        <!--app:layout_constraintEnd_toEndOf="parent" />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/event_details_submit_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/event_details_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_event_submit_button_selector"
            android:gravity="center"
            android:padding="12dp"
            android:text="I'm in"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/progress_bar_background_event_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress_event_details"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>